[tool.cibuildwheel]
build = "*"
# Disable building PyPy wheels on all platforms
skip = "pp*"
test-skip = ""

archs = ["auto"]
build-frontend = "pip"
dependency-versions = "pinned"
environment = {}
environment-pass = []
build-verbosity = ""

before-all = ""
before-build = ""
repair-wheel-command = ""

before-test = ""
test-requires = "pytest"
test-command = "pytest {package}/python_solnp/test/test.py"

manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[project]
requires-python = ">=3.8"
