[tool.cibuildwheel]
build = "*"

skip = ""
test-skip = []  # Skip tests on amd64 windows as the runner won't work with them

archs = ["auto"]
build-frontend = "pip"
dependency-versions = "pinned"
environment = {}
environment-pass = []
build-verbosity = ""

before-all = ""
before-build = ""
repair-wheel-command = ""

before-test = ""
test-requires = "pytest"
test-command = "pytest {package}/python_solnp/test/test.py"

manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[build-system]
requires = ["setuptools==75.3.2"]  # metadata-version = "2.1"
